# Radar-de-Mercados

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  PLAN.md  README.md  STATUS.md  pyproject.toml  requirements.txt  streamlit_app.py
.claude/: launch.json  settings.json
.github/workflows/: ci.yml  data-refresh.yml
.streamlit/: config.toml
data/processed/: backtest.json  macro_context.parquet  narrative.json  ranking.parquet
data/processed/0603/: competitors.parquet  imports_timeseries.parquet  meta.json  narrative.json  ranking.parquet  tariff_profile.parquet  unit_values.parquet
data/processed/0803/: competitors.parquet  imports_timeseries.parquet  meta.json  narrative.json  ranking.parquet  tariff_profile.parquet  (+1 more)
data/sample/: stub_baskets.csv  stub_bilateral.csv  stub_export_totals.csv  stub_imports.csv  stub_macro.csv  stub_tariffs.csv
src/tradefit/: __init__.py  config.py  contracts.py  hs_codes.py
tests/: conftest.py  test_backtest.py  test_deploy_config.py  test_export.py  test_format.py  test_hs_codes.py  test_indices.py  test_ingest_cache.py  test_ingest_competitors.py  test_ingest_comtrade.py  test_ingest_export_destinations.py  test_ingest_geodist.py  test_ingest_hs_reference.py  test_ingest_top_exports.py  test_ingest_wits.py  test_ingest_worldbank.py  test_macro_filter.py  test_narrative.py  test_pipeline.py  test_refresh.py  test_scoring.py  test_snapshot_io.py
tests/fixtures/: baskets_small.csv  bilateral_small.csv  comtrade_response.json  imports_small.csv  tariffs_small.csv  wits_eu_mfn_060311.xml  wits_eu_pref_060311.xml
(+131 files in other folders)
