[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tradefit"
version = "0.1.0"
description = "Radar de Mercados — screener de mercados de exportación (producto HS + origen → ranking de destinos)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.3.3",
    "pandera==0.26.1",
    "pyarrow==21.0.0",
    "streamlit==1.49.1",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "openpyxl==3.1.5",
    "reportlab==5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "ruff==0.13.3",
    "mypy==1.18.2",
    "pre-commit==4.3.0",
    "pandas-stubs==2.3.2.250926",
    "types-requests==2.32.4.20250913",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errores
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
]

[tool.mypy]
# 3.12 como mínimo para el chequeo: los stubs de numpy 2.x usan `type` (PEP 695).
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["streamlit.*", "pandera.*", "pyarrow.*", "openpyxl.*", "reportlab.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
